syntax = "proto3";

option csharp_namespace = "FileServer";

message ImageRequest {
  string image_id = 1;
}

message ImageResponse {
  bool exists = 1;
}

message TrackRequest {
  string track_id = 1;
}

message TrackResponse {
  bool exists = 1;
}

service FileService {
  rpc CheckImageExists(ImageRequest) returns (ImageResponse);
  rpc CheckTrackExists(TrackRequest) returns (TrackResponse);
}